Mon Jul 29 02:46:12 1996  Roland McGrath  <roland@baalperazim.frob.com>

	* munge.c (input_character): In LAST_LNEXT case, jump to `alldone'
	after putting the char on the queue.

Fri Jul 19 23:46:39 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_access): Implement locally always
	returning all access.  Eventually, this needs to do the right
	thing when trivfs wises up wrt modes.

Tue Jul 16 20:49:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c (trivfs_S_io_read): Bother to set atime when
 	appropriate.

	* users.c (trivfs_modify_stat): Fill in st->st_mode, st->st_uid,
	and st->st_gid ourselves.
	(trivfs_S_file_chown): New routine, to override trivfs default.
	(trivfs_S_file_chmod): Likewise.
	* main.c (main): Initialize term_owner, term_group, and term_mode.
	* term.h (term_owner, term_group, term_mode): New variables.

Thu Jun 20 16:45:57 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* devio.c (devio_abandon_physical_output): Don't do anything if
 	carrier is off.

Thu Jun 20 16:26:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (OBJS): Add ../libfshelp/libfshelp.a.

Sat May 11 01:18:41 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* iomux.c (parse_opt): Use ARGP_ERR_UNKNOWN instead of EINVAL.

Fri May 10 09:27:46 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c: Include <stdio.h>.

	* users.c (init_users): Order args correctly in call to
 	ports_create_port.

Thu May  9 19:32:50 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c (call_asyncs): Provide sigcode arg in call to
 	nowait_msg_sig_post.

	* users.c (init_users): Use new ports_create_port.
	* devio.c (device_open_reply): Likewise.

Thu Apr 25 16:04:17 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ptyio.c (pty_open_hook): Don't do increment of nptyperopens
 	here.
	(pty_po_create_hook): Increment nptyperopens here, but only if this is
	for O_READ or O_WRITE.