@@ -33,12 +33,14 @@
 #undef NOFLSH
 #include <termios.h>
 
-#define CHAR_SOH '\001'		/* C-a */
 #define CHAR_EOT '\004'		/* C-d */
 #define CHAR_DC1 '\021'		/* C-q */
 #define CHAR_DC2 '\022'		/* C-r */
 #define CHAR_DC3 '\023'		/* C-s */
 #define CHAR_USER_QUOTE '\377'	/* break quoting, etc. */
+
+/* This bit specifies control */
+#define CTRL_BIT 0x20
 
 /* XXX These belong in <termios.h> */
 #define ILCASE (1 << 14)
